2008-03-07  Ethan A Merritt  <merritt@u.washington.edu>

	* src/wxterminal/gp_cairo.c src/wxterminal/gp_cairo.h
	src/wxterminal/wxt_gui.cpp:  Treated dotted lines (LT_AXIS) differently
	from the general cycle of dash patterns.

	* term/cairo.trm: Scale dashlength down by a factor of 2 for pdfcairo.

2008-03-06  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (boundary): Handle the case of a fixed aspect ratio and
	fixed plot margins. Fixed left margin takes precedence over right. Fixed
	bottom margin takes precedence over top. If no margins are fixed, center
	the plot.

2008-03-04  Ethan A Merritt  <merritt@u.washington.edu>

	* term/fig.trm (FIG_layer): We don't know a true bounding box at the
	time a new plot is started, but fig2dev insists that some numbers be
	present; give it the bounding box of the full plot.
	Bug #1906855

	* src/graph3d.c (draw3d_graph_box):  Turn off clipping while drawing
	the border + ticks, since we don't want to clip "out" ticks.
	Bug #1906933

2008-03-03  Ethan A Merritt  <merritt@u.washington.edu>

	* src/color.c (draw_color_smooth_box) src/unset.c (unset_axislabel):
	Allow user to set colorbar label rotatation if the bar is vertical.

	* term/cgm.trm:  Adjust palette size based on actual number of
	color slots remaining in the table.

2008-03-02  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm:  Clean up terminal code.
	Use shared routines gp_alloc(), int_expression().
	Switch to using same set of colors as other terminals (web_color_rgbs).
	Handle RGB color request by returning closest match to a known color.
	Don't over-write user colors with each new palette.
	Decouple dash pattern from line color.

	* src/command.h:  refresh_request() depends on VOLATILE_REFRESH, not
	USE_MOUSE.

2008-03-01  Ethan A Merritt  <merritt@u.washington.edu>

	* term/cgm.trm (CGM_fillbox CGM_filled_polygon):  Move the
	management of fill styles and pm3d fill from CGM_fillbox() to 