@@ -1,3 +1,11 @@
+2008-03-08  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/datafile.c (df_gets): Revert patch of 2008-02-22 because testing
+	for "if (interactive)" is not a sufficient guarantee that it is safe to
+	call readline();   Example:  "load foo" where "foo" contains a plot
+	command with inline data (readline() tries to read from the terminal,
+	not the file).  Thanks to Ralf Juengling for analysing the problem.
+
 2008-03-07  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/wxterminal/gp_cairo.c src/wxterminal/gp_cairo.h
